nuclear bomb button

--- a/nuclearButton/index.html
+++ b/nuclearButton/index.html
@@ -32,7 +32,7 @@
 
             transition-duration: 0.1s;
         }
-        #button-img:active{
+        #button-img:active{ /*버튼 이미지 클릭했을 때 눌리는 효과 구현*/
             margin-left: 5px;
             margin-top: 5px;
             box-shadow: none;
