--- a/weatherForecast/index.html
+++ b/weatherForecast/index.html
@@ -10,12 +10,7 @@
             text-align: center;
         }
 
-        #district {
-            margin-left: 15px;
-            margin-right: 15px
-        }
-
-        #districts {
+        .dropdown {
             text-align: center;
             padding-inline: 10px;
         }
@@ -29,18 +24,24 @@
 <body>
     <div id="container">
         <h2 id="today-weather">날씨</h2>
-        <span id="district">
-            <select name="districts" id="districts">
+        <h6><b>※현재시간 이전의 시간을 선택해주세요</b></h6>
+            <select class="dropdown" name="districts" id="districts">
                 <option value="selection">지역을 선택하세요.</option>
                 <option value="seoul">서울</option>
                 <option value="busan">부산</option>
                 <option value="osan">오산</option>
                 <option value="jeonju">전주</option>
             </select>
-        </span>
+            <select class="dropdown" name="time-zone" id="time-zone">
+                <option value="selection">시간을 선택하세요.</option>
+                <option value="0500">06:00</option>
+                <option value="0800">09:00</option>
+                <option value="1100">12:00</option>
+                <option value="1400">15:00</option>
+                <option value="1700">18:00</option>
+            </select>
         <button id="get-weather-button" onclick="getWeather()">버튼을 누르세요</button>
         <div id="tagArea">
-            <p id="weather"></p>
         </div>
     </div>
     <script>
@@ -50,18 +51,22 @@
             var dictAreaY = {'seoul':'127', 'osan':'118', 'busan':'76', 'jeonju':'89'};
             var selectedDistricts = document.getElementById('districts');
             selectedDistricts = selectedDistricts.options[selectedDistricts.selectedIndex]; // 드롭박스에서 선택 된 도시 불러옴
+            
+            var selectedTimeZone = document.getElementById('time-zone');
+            selectedTimeZone = selectedTimeZone.options[selectedTimeZone.selectedIndex]; // 드롭박스에서 선택 된 시간 불러옴
 
             var today = new Date(); // 실시간 날짜 받아옴
             var year = today.getFullYear();
             var month = ('0' + (today.getMonth() + 1)).slice(-2);
             var day = ('0' + today.getDate()).slice(-2);
             var dateString = year + month + day;
-            document.getElementById('today-weather').innerText = year+"년 "+month+"월 "+day+"일 09시 "+selectedDistricts.text+" 날씨";
+            document.getElementById('today-weather').innerText = `${year}년 ${month}월 ${day}일 ${selectedTimeZone.text} ${selectedDistricts.text} 날씨`;
 
             let tagArea = document.getElementById('tagArea');
+            document.getElementById('tagArea').innerText = '';
 
             fetch("https://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getVilageFcst?serviceKey=dk9HCpmex4qFj8Pt2%2BWk3Rv5k91C9MjR4WFbmPDeCpprkpTQRqRYiE4vkEDhIV2IwoqwEaniSytfU21INgV9Rg%3D%3D&dataType=JSON"+
-            "&numOfRows=10&&pageNo=1&base_date=" + dateString + "&base_time=0800&nx="+dictAreaX[selectedDistricts.value]+"&ny="+dictAreaY[selectedDistricts.value],  { cache: 'force-cache' })//json파일 읽어오기 (캐시된 리소스를 사용하여 로딩 속도를 향상)
+            "&numOfRows=10&&pageNo=1&base_date="+dateString+"&base_time="+selectedTimeZone.value+"&nx="+dictAreaX[selectedDistricts.value]+"&ny="+dictAreaY[selectedDistricts.value],  { cache: 'force-cache' })//json파일 읽어오기 (캐시된 리소스를 사용하여 로딩 속도를 향상)
             .then((response) => response.json())//읽어온 데이터를 json으로 변환
             .then((data) => {
                 let elm = data.response.body.items.item;
